Update Blog “2019-01-21-prova”

--- a/_posts/2019-01-21-prova.md
+++ b/_posts/2019-01-21-prova.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: Prova
+title: Cómo salir del agua sin lloros
 date: 2019-01-21T16:44:41.271Z
-categories: prova
+categories: Infantil
 ---
-Aviam
+TExt
