Update Blog “2019-01-21-prova”

--- a/_posts/2019-01-21-prova.md
+++ b/_posts/2019-01-21-prova.md
@@ -4,4 +4,28 @@ title: Cómo salir del agua sin lloros
 date: 2019-01-21T16:44:41.271Z
 categories: Infantil
 ---
-TExt
+Es costubre en tu casa iros sin despedirse de tu hij@? Crees que tu hij@ no es capaz de entender que te vas y vuelves en un rato?
+
+Muchos niños han asociado el adiós de los padres con una desaparición sin explicación alguna. Es probable que tu hij@ sienta el abandono y muestre su enfado y/o tristeza. ¿Se va y me deja aquí sol@? No va a volver! (Foto con pensamiento niño?)
+
+## Cómo empezar
+
+Primero le tendrás que enseñar a tu hij@ qué significa que te vas y que regresas pronto de una manera comprensible y sencilla. Vamos allá:
+
+Ya list@ para salir de casa, dile a tu hij@ manera cálida “Me voy y ahora vuelvo. Un beso“. Evita frases largas que puedan ser confusas, como por ejemplo, “me voy un ratito a comprar al mercado y luego regreso y jugamos juntos, vale? Qué buen que te quedas con la tía”, eso puede resultarle confuso.
+
+## Cómo seguir
+
+De camino a la puerta usa la palabra de despedida que usas normalmente: por ejemplo, “Ciao bebé” y vete con una sonrisa. Tranquil@, regresarás al minuto.
+
+## Cómo proceder
+
+Probablemente te irá mejor si puedes practicar este paso con una persona dentro de la casa que ayude a tu hij@ a esperar calmadamente a que vuelvas. Si tu hij@ está inquiet@ te invito a que sigas hablando detrás de la puerta hasta tu vuelta al poco rato (que sea corto, no lo alargues).
+
+## Celébralo
+
+A tu regreso, celébralo con tu hij@!
+
+A ser posible, practica una despedida similar con otras personas de la casa. El aprendizaje llegará cuando tu hij@ comprenda el significado de la despedida, y que el adulto va a regresar.
+
+Una señal de inicio de comprensión será cuando tu hij@ responda a la despedida con un gesto o palabra y cuando se quede expectante mirando a la puerta. Si tu despedida ha cumplido los pasos, tu hij@ está a un paso de comprender que tu salida por la puerta significa que regresarás!
