Update Blog “2019-01-21-prova”

--- a/_posts/2019-01-21-prova.md
+++ b/_posts/2019-01-21-prova.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Cómo salir del agua sin lloros
+title: Cómo evitar los lloros al salir de casa (1a parte)
 date: 2019-01-21T16:44:41.271Z
-categories: Infantil
+categories: infantil
 ---
 Es costubre en tu casa iros sin despedirse de tu hij@? Crees que tu hij@ no es capaz de entender que te vas y vuelves en un rato?
 
