--- a/_posts/2019-01-21-prova.md
+++ b/_posts/2019-01-21-prova.md
@@ -1,31 +1,31 @@
 ---
 layout: post
-title: Cómo evitar los lloros al salir de casa (1a parte)
+title: Consejos para evitar que tu hijo llore cuando sales de casa (1a parte)
 date: 2019-01-21T16:44:41.271Z
 categories: infantil
 ---
-Es costubre en tu casa iros sin despedirse de tu hij@? Crees que tu hij@ no es capaz de entender que te vas y vuelves en un rato?
+¿Es costumbre en tu casa iros sin despedirse de tu hijo? ¿Crees que no es capaz de entender que te vas y vuelves en un rato? Muchos niños han asociado el adiós de los padres con una desaparición sin explicación alguna. Es probable que tu hijo sienta el abandono y muestre su enfado o tristeza.
 
-Muchos niños han asociado el adiós de los padres con una desaparición sin explicación alguna. Es probable que tu hij@ sienta el abandono y muestre su enfado y/o tristeza. ¿Se va y me deja aquí sol@? No va a volver! (Foto con pensamiento niño?)
+Primero **tendrás que enseñarle qué significa lo de "me voy y ahora vuelvo"**. Aquí van una serie de tres consejos prácticos y sencillos para hacer los primeros pasos hacia una despedida sin lloros. 
 
-## Cómo empezar
 
-Primero le tendrás que enseñar a tu hij@ qué significa que te vas y que regresas pronto de una manera comprensible y sencilla. Vamos allá:
 
-Ya list@ para salir de casa, dile a tu hij@ manera cálida “Me voy y ahora vuelvo. Un beso“. Evita frases largas que puedan ser confusas, como por ejemplo, “me voy un ratito a comprar al mercado y luego regreso y jugamos juntos, vale? Qué buen que te quedas con la tía”, eso puede resultarle confuso.
+## 1. Usa un lenguaje sencillo
 
-## Cómo seguir
+Primero le tendrás que enseñar a tu hijo qué significa que te vas y que regresas pronto de una manera comprensible y sencilla. Vamos allá: ya listo o lista para salir de casa, dile a tu hijo de manera cálida “Me voy y ahora vuelvo. Un beso“. **Evita frases largas** que puedan ser confusas, como por ejemplo, “me voy un ratito a comprar al mercado y luego regreso y jugamos juntos, vale?, eso puede resultarle confuso.
 
-De camino a la puerta usa la palabra de despedida que usas normalmente: por ejemplo, “Ciao bebé” y vete con una sonrisa. Tranquil@, regresarás al minuto.
+## 2. Despídete de una forma cálida
 
-## Cómo proceder
+De camino a la puerta usa la **palabra y gesto de despedida **que usas normalmente: por ejemplo, “Ciao bebé” y vete con una sonrisa. Tranquilo/a, regresarás antes de un minuto.
 
-Probablemente te irá mejor si puedes practicar este paso con una persona dentro de la casa que ayude a tu hij@ a esperar calmadamente a que vuelvas. Si tu hij@ está inquiet@ te invito a que sigas hablando detrás de la puerta hasta tu vuelta al poco rato (que sea corto, no lo alargues).
+Probablemente te irá mejor si puedes practicar este paso con una persona conocida dentro de casa que acompañe a tu hijo/a durante la espera estando cerca y atenta a tu hijo/a. Si le ves inquieto/a te invito a que sigas hablando desde detrás de la puerta hasta tu vuelta al poco rato (que sea corto, no lo alargues).
 
-## Celébralo
+## 3. Regresa a los 30 segundos con una sonrisa
 
-A tu regreso, celébralo con tu hij@!
+A tu regreso, celébralo con tu hijo/a y muéstrate contento/a! Está viviendo la separación y el reencuentro contigo y esto es una experiencia intensa para los pequeños. 
 
-A ser posible, practica una despedida similar con otras personas de la casa. El aprendizaje llegará cuando tu hij@ comprenda el significado de la despedida, y que el adulto va a regresar.
+A ser posible, **practícalo más veces** en otros momentos y haz despedidas similares con otras personas de la casa. El aprendizaje llegará cuando tu hijo/a comprenda el significado de la despedida, y que el adulto va a regresar.
 
-Una señal de inicio de comprensión será cuando tu hij@ responda a la despedida con un gesto o palabra y cuando se quede expectante mirando a la puerta. Si tu despedida ha cumplido los pasos, tu hij@ está a un paso de comprender que tu salida por la puerta significa que regresarás!
+
+
+Una **señal de inicio de comprensión de la despedida será cuando tu hijo/a responda a la despedida con un gesto o palabra y cuando se quede expectante mirando a la puerta**. Si tu despedida ha cumplido los pasos, tu hijo/a está a un paso de comprender que tu salida por la puerta significa que regresarás.
