Update Blog “2019-01-21-prova”

--- a/_posts/2019-01-21-prova.md
+++ b/_posts/2019-01-21-prova.md
@@ -4,21 +4,21 @@ title: Consejos para evitar que tu hijo llore cuando sales de casa (1a parte)
 date: 2019-01-21T16:44:41.271Z
 categories: infantil
 ---
-¿Es costumbre en tu casa iros sin despedirse de tu hijo? ¿Crees que no es capaz de entender que te vas y vuelves en un rato? Muchos niños han asociado el adiós de los padres con una desaparición sin explicación alguna. Es probable que tu hijo sienta el abandono y muestre su enfado o tristeza.
+¿Es costumbre en tu casa iros sin despedirse de tu hijo o hija? ¿Crees que no es capaz de entender que te vas y vuelves en un rato? Muchos niños y niñas han asociado el adiós de los padres con una desaparición sin explicación alguna. Es probable que tu hijo/a sienta el abandono y muestre su enfado o tristeza.
 
-Primero **tendrás que enseñarle qué significa lo de "me voy y ahora vuelvo"**. Aquí van una serie de tres consejos prácticos y sencillos para hacer los primeros pasos hacia una despedida sin lloros. 
+Primero **tendrás que enseñarle qué significa lo de "me voy y en seguida vuelvo"**. Aquí van una serie de tres consejos prácticos y sencillos para hacer los primeros pasos hacia una despedida sin lloros. 
 
 
 
 ## 1. Usa un lenguaje sencillo
 
-Primero le tendrás que enseñar a tu hijo qué significa que te vas y que regresas pronto de una manera comprensible y sencilla. Vamos allá: ya listo o lista para salir de casa, dile a tu hijo de manera cálida “Me voy y ahora vuelvo. Un beso“. **Evita frases largas** que puedan ser confusas, como por ejemplo, “me voy un ratito a comprar al mercado y luego regreso y jugamos juntos, vale?, eso puede resultarle confuso.
+Primero le tendrás que enseñar a tu hijo/a qué significa que te vas y que regresas pronto de una manera comprensible y sencilla. Vamos allá: ya listo/a  para salir de casa, dile a tu hijo/a de manera cálida: “Me voy y en seguida vuelvo. Un beso“. **Evita frases largas** que puedan ser confusas, como por ejemplo, “me voy un ratito a comprar al mercado y luego regreso y jugamos juntos, vale?, eso puede resultarle confuso.
 
 ## 2. Despídete de una forma cálida
 
 De camino a la puerta usa la **palabra y gesto de despedida **que usas normalmente: por ejemplo, “Ciao bebé” y vete con una sonrisa. Tranquilo/a, regresarás antes de un minuto.
 
-Probablemente te irá mejor si puedes practicar este paso con una persona conocida dentro de casa que acompañe a tu hijo/a durante la espera estando cerca y atenta a tu hijo/a. Si le ves inquieto/a te invito a que sigas hablando desde detrás de la puerta hasta tu vuelta al poco rato (que sea corto, no lo alargues).
+Probablemente te irá mejor si puedes practicar este paso con una persona conocida dentro de casa que acompañe a tu hijo/a durante la espera estando cerca y atento/a a tu hijo/a. Si le ves inquieto/a te invito a que sigas hablando desde detrás de la puerta hasta tu vuelta al poco rato (que sea corto, no lo alargues).
 
 ## 3. Regresa a los 30 segundos con una sonrisa
 
@@ -28,4 +28,6 @@ A ser posible, **practícalo más veces** en otros momentos y haz despedidas sim
 
 
 
-Una **señal de inicio de comprensión de la despedida será cuando tu hijo/a responda a la despedida con un gesto o palabra y cuando se quede expectante mirando a la puerta**. Si tu despedida ha cumplido los pasos, tu hijo/a está a un paso de comprender que tu salida por la puerta significa que regresarás.
+Una **señal de inicio de comprensión de la despedida será cuando tu hijo/a responda a la despedida con un gesto o palabra y cuando se quede expectante mirando a la puerta**. Si tu despedida ha cumplido los pasos, tu hijo/a está a un paso de comprender que tu salida por la puerta significa que regresarás. 
+
+No te olvides de seguir despidiéndote explicando que te vas y cuándo regresarás, según la comprensión de tu hijo/a. Los 5 pasos más importantes, **aquí.** (LINK: Consejos para evitar que tu hijo llore cuando sales de casa (2a parte))
