Update Blog “2019-01-21-prova”

--- a/_posts/2019-01-21-prova.md
+++ b/_posts/2019-01-21-prova.md
@@ -6,9 +6,7 @@ categories: infantil
 ---
 ¿Es costumbre en tu casa iros sin despedirse de tu hijo o hija? ¿Crees que no es capaz de entender que te vas y vuelves en un rato? Muchos niños y niñas han asociado el adiós de los padres con una desaparición sin explicación alguna. Es probable que tu hijo/a sienta el abandono y muestre su enfado o tristeza.
 
-Primero **tendrás que enseñarle qué significa lo de "me voy y en seguida vuelvo"**. Aquí van una serie de tres consejos prácticos y sencillos para hacer los primeros pasos hacia una despedida sin lloros. 
-
-
+Primero **tendrás que enseñarle qué significa lo de "me voy y en seguida vuelvo"**. Aquí van tres prácticos y sencillos consejos para hacer los primeros pasos hacia una despedida sin lloros. 
 
 ## 1. Usa un lenguaje sencillo
 
@@ -26,7 +24,7 @@ A tu regreso, celébralo con tu hijo/a y muéstrate contento/a! Está viviendo l
 
 A ser posible, **practícalo más veces** en otros momentos y haz despedidas similares con otras personas de la casa. El aprendizaje llegará cuando tu hijo/a comprenda el significado de la despedida, y que el adulto va a regresar.
 
-
+- - -
 
 Una **señal de inicio de comprensión de la despedida será cuando tu hijo/a responda a la despedida con un gesto o palabra y cuando se quede expectante mirando a la puerta**. Si tu despedida ha cumplido los pasos, tu hijo/a está a un paso de comprender que tu salida por la puerta significa que regresarás. 
 
