Update Blog “2019-01-21-prova”

--- a/_posts/2019-01-21-prova.md
+++ b/_posts/2019-01-21-prova.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Consejos para evitar que tu hijo llore cuando sales de casa (1a parte)
+title: Consejos para ayudar a tu hijo a comprender las despedidas
 date: 2019-01-21T16:44:41.271Z
 categories: infantil
 ---
