Update Blog “2019-01-21-prova”

--- a/_posts/2019-01-21-prova.md
+++ b/_posts/2019-01-21-prova.md
@@ -9,16 +9,10 @@ categories: infantil
 Primero **tendrás que enseñarle qué significa lo de "me voy y en seguida vuelvo"**. Aquí van tres prácticos y sencillos consejos para hacer los primeros pasos hacia una despedida sin lloros. 
 
 1. Primero le tendrás que enseñar a tu hijo/a qué significa que te vas y que regresas pronto de una manera comprensible y sencilla. Vamos allá: ya listo/a  para salir de casa, dile a tu hijo/a de manera cálida: “Me voy y en seguida vuelvo. Un beso“. **Evita frases largas** que puedan ser confusas, como por ejemplo, “me voy un ratito a comprar al mercado y luego regreso y jugamos juntos, vale?, eso puede resultarle confuso.
-
-2. De camino a la puerta usa la **palabra y gesto de despedida** que usas normalmente: por ejemplo, “Ciao bebé” y vete con una sonrisa. Tranquilo/a, regresarás antes de un minuto.
-
-Probablemente te irá mejor si puedes practicar este paso con una persona conocida dentro de casa que acompañe a tu hijo/a durante la espera estando cerca y atento/a a tu hijo/a. Si le ves inquieto/a te invito a que sigas hablando desde detrás de la puerta hasta tu vuelta al poco rato (que sea corto, no lo alargues).
-
+2. De camino a la puerta usa la **palabra y gesto de despedida** que usas normalmente: por ejemplo, “Ciao bebé” y vete con una sonrisa. Tranquilo/a, regresarás antes de un minuto. Tendrás que practicar este paso con la ayuda de una persona conocida que acompañe a tu hijo/a durante la espera estando cerca y atento/a a tu hijo/a. Si le ves inquieto/a te invito a que sigas hablando desde detrás de la puerta hasta tu vuelta al poco rato (que sea corto, no lo alargues).
 3. A tu regreso a los 30 segundos, **celébralo con tu hijo/a y muéstrate contento/a**! Está viviendo la separación y el reencuentro contigo y esto es una experiencia intensa para los pequeños. 
 
 A ser posible, **practícalo más veces** en otros momentos y haz despedidas similares con otras personas de la casa. El aprendizaje llegará cuando tu hijo/a comprenda el significado de la despedida, y que el adulto va a regresar.
-
-
 
 - - -
 
